--- a/thesis/0-ref-lib.bib
+++ b/thesis/0-ref-lib.bib
@@ -227,4 +227,16 @@ urldate = {05-08-22}
   publisher={Wiley Online Library}
 }
 
+@article{lewis20112010,
+  title={The 2010 amazon drought},
+  author={Lewis, Simon L and Brando, Paulo M and Phillips, Oliver L and Van Der Heijden, Geertje MF and Nepstad, Daniel},
+  journal={Science},
+  volume={331},
+  number={6017},
+  pages={554--554},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+
+
 
